WebFont loading done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta http-equiv="cleartype" content="on">
-
+    <link rel="stylesheet" href="assets/fonts/stylesheet.css"/>
     <style>
         html,
         body {
@@ -17,7 +17,6 @@
         }
     </style>
 </head>
-
 <body>
 
     <div id="content"></div>
